--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ flake8==3.7.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-mysqlclient==1.4.6
 Pillow==7.0.0
+psycopg2==2.8.4
 pycodestyle==2.5.0
 pyflakes==2.1.1
 pylint==2.4.4
@@ -20,4 +20,3 @@ pytz==2019.3
 six==1.14.0
 sqlparse==0.3.0
 wrapt==1.11.2
-
