--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-environ==0.4.5
 django-extensions==2.2.8
 entrypoints==0.3
 flake8==3.7.9
+gunicorn==20.0.4
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
